--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 <body>
 
  <!--Navigation-->
-
+ <div class="container header">
+  <img class="logo" src="images/Beige Brown Minimalist Pet Shop - Logo.png">
+    <nav class="nav justify-content-end">
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Home</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Adoption</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Available Animals</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">How You Can Help</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">News & Events</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Resources</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">FAQs</a>
+      </nav> 
+  </div>
 
 
  <!--Hero Image-->
