--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
  <!--Navigation-->
  <div class="container header">
   <img class="logo" src="images/Beige Brown Minimalist Pet Shop - Logo.png">
+  <button type="button" class="btn btn-primary">ADOPT</button>
+  <button type="button" class="btn btn-secondary">FOSTER</button>
+ </div>
+ <div class="container-fluid nav"></div>
     <nav class="nav justify-content-end">
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Home</a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
@@ -25,14 +29,25 @@
 
 
  <!--Hero Image-->
-
+ <div class="container">
+</div>
 
  <!--Main Content-->
-
+ <div class="container header">
+</div>
 
  
 
  <!--Footer-->
+ <div class="container header">
+    <nav class="nav justify-content-end">
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Adoption</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Foster</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
+      </nav>
+      <img class="logo" src="images/Beige Brown Minimalist Pet Shop - Logo.png">
+  </div>
 
 </body>
 </html>
