added justify content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <button type="button" class="btn btn-secondary">FOSTER</button>
  </div>
  <div class="container-fluid nav"></div>
-    <nav class="nav justify-content-end">
+    <nav class="nav justify-content-center">
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Home</a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Adoption</a>
@@ -29,7 +29,7 @@
 
 
  <!--Hero Image-->
- <div class="container">
+ <div class="container hero">
 </div>
 
  <!--Main Content-->
