--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 </head>
 <body>
 
- <!--Navigation-->
+ <!--Header-->
  <div class="container header">
   <img class="logo" src="images/Beige Brown Minimalist Pet Shop - Logo.png">
   <button type="button" class="btn btn-primary">ADOPT</button>
   <button type="button" class="btn btn-secondary">FOSTER</button>
  </div>
+ 
+  <!--Navigation-->
  <div class="container-fluid nav"></div>
-    <nav class="nav justify-content-end">
+    <nav class="nav navcenter">
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Home</a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Adoption</a>
@@ -29,7 +31,7 @@
 
 
  <!--Hero Image-->
- <div class="container">
+ <div class="container hero">
 </div>
 
  <!--Main Content-->
