--- a/index.html
+++ b/index.html
@@ -10,17 +10,13 @@
  <!--Header-->
  <div class="container header">
   <img class="logo" src="images/Beige Brown Minimalist Pet Shop - Logo.png">
-  <button type="button" class="btn btn-primary">ADOPT</button>
+  <button type="button" class="btn btn-primary justify-content-end">ADOPT</button>
   <button type="button" class="btn btn-secondary">FOSTER</button>
  </div>
  
   <!--Navigation-->
  <div class="container-fluid nav"></div>
-<<<<<<< HEAD
-    <nav class="nav navcenter">
-=======
-    <nav class="nav justify-content-center">
->>>>>>> 3cb84789813e6fb1818ffa198dd12dbb60fb8aae
+    <nav class="nav justify-content-center navcenter">
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Home</a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Adoption</a>
@@ -35,7 +31,8 @@
 
 
  <!--Hero Image-->
- <div class="container hero">
+ <div class="container-fluid">
+  <img class="" src="images/hero-1.png">
 </div>
 
  <!--Main Content-->
@@ -45,14 +42,16 @@
  
 
  <!--Footer-->
- <div class="container header">
-    <nav class="nav justify-content-end">
+ <div class="container-fluid nav-footer"></div>
+    <nav class="nav justify-content-left navleft">
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Adoption</a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Foster</a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
       </nav>
-      <img class="logo" src="images/Beige Brown Minimalist Pet Shop - Logo.png">
+  </div>
+  <div class="container whitefooter">
+  <img class="logo" src="images/Beige Brown Minimalist Pet Shop - Logo.png">
   </div>
 
 </body>
