update to remove extra code

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
   <!--Navigation-->
   <div class="container-fluid nav">
     <div class="container">
-    <nav class="nav nav-collapse justify-content-center navcenter">
-      <a class="nav-link" href="index.html" tabindex="-1" aria-disabled="true">Home</a>
-      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
-      <a class="nav-link" href="adoption.html" tabindex="-1" aria-disabled="true">Adoption</a>
-      <a class="nav-link" href="animals.html" tabindex="-1" aria-disabled="true">Available Animals</a>
-      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">How You Can Help</a>
-      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">News & Events</a>
-      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Resources</a>
-      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
-      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">FAQs</a>
-    </nav>
-  </div>
+      <nav class="nav nav-collapse justify-content-center navcenter">
+        <a class="nav-link" href="index.html" tabindex="-1" aria-disabled="true">Home</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
+        <a class="nav-link" href="adoption.html" tabindex="-1" aria-disabled="true">Adoption</a>
+        <a class="nav-link" href="animals.html" tabindex="-1" aria-disabled="true">Available Animals</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">How You Can Help</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">News & Events</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Resources</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">FAQs</a>
+      </nav>
+    </div>
   </div>
 
 
@@ -135,186 +135,112 @@
             aria-haspopup="true" aria-expanded="false">Filter</a>
 
           <!--Options-->
-          
+
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <!--Size-->
-            <div>
-              <a class="dropdown-item" href="#">Size
-                <div class="input-group ">
-                  <div class="input-group-prepend">
-                    <div class="input-group-text">
-                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Small
-                    </div>
-                  </div>
-                </div>
-              </a>
+            <div class="dropdown-menu-flex">
+              <!--Size-->
 
-              <a class="dropdown-item" href="#">
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <div class="input-group-text">
-                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Medium
+              <div>
+                <a class="dropdown-item" href="#">Size
+                  <div class="input-group ">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Small
+                      </div>
                     </div>
                   </div>
-                </div>
-              </a>
+                </a>
 
-              <a class="dropdown-item" href="#">
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <div class="input-group-text">
-                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Large
+                <a class="dropdown-item" href="#">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Medium
+                      </div>
                     </div>
                   </div>
-                </div>
-              </a>
+                </a>
+
+                <a class="dropdown-item" href="#">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Large
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+
+
+              <!--Age-->
+              <div>
+                <a class="dropdown-item" href="#">Age
+                  <div class="input-group ">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;0-2Y
+                      </div>
+                    </div>
+                  </div>
+                </a>
+
+                <a class="dropdown-item" href="#">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;2-6Y
+                      </div>
+                    </div>
+                  </div>
+                </a>
+
+                <a class="dropdown-item" href="#">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;6 - Older
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+
+              <!--Temperment-->
+              <div>
+                <a class="dropdown-item" href="#">Size
+                  <div class="input-group ">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Calm
+                      </div>
+                    </div>
+                  </div>
+                </a>
+
+                <a class="dropdown-item" href="#">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Energetic
+                      </div>
+                    </div>
+                  </div>
+                </a>
+
+                <a class="dropdown-item" href="#">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">
+                        <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Hypersensitive
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+
             </div>
-
-
-            <!--Age-->
-            <div>
-              <a class="dropdown-item" href="#">Age
-                <div class="input-group ">
-                  <div class="input-group-prepend">
-                    <div class="input-group-text">
-                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;0-2Y
-                    </div>
-                  </div>
-                </div>
-              </a>
-
-              <a class="dropdown-item" href="#">
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <div class="input-group-text">
-                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;2-6Y
-                    </div>
-                  </div>
-                </div>
-              </a>
-
-              <a class="dropdown-item" href="#">
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <div class="input-group-text">
-                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;6 - Older
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-
-            <!--Temperment-->
-            <div>
-              <a class="dropdown-item" href="#">Size
-                <div class="input-group ">
-                  <div class="input-group-prepend">
-                    <div class="input-group-text">
-                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Calm
-                    </div>
-                  </div>
-                </div>
-              </a>
-
-              <a class="dropdown-item" href="#">
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <div class="input-group-text">
-                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Energetic
-                    </div>
-                  </div>
-                </div>
-              </a>
-
-              <a class="dropdown-item" href="#">
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <div class="input-group-text">
-                      <input type="checkbox" aria-label="Checkbox for following text input">&nbsp;Hypersensitive
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-
-
-
-
-
           </div>
-
-          <!--Age-->
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">Age
-            <a class="dropdown-item" href="#">
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">
-                    <input type="checkbox" aria-label="Checkbox for following text input">0-2Y
-                  </div>
-                </div>
-                <input type="text" class="form-control" aria-label="Text input with checkbox">
-              </div>
-            </a>
-
-            <a class="dropdown-item" href="#">
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">
-                    <input type="checkbox" aria-label="Checkbox for following text input">2-6Y
-                  </div>
-                </div>
-                <input type="text" class="form-control" aria-label="Text input with checkbox">
-              </div>
-            </a>
-
-            <a class="dropdown-item" href="#">
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">
-                    <input type="checkbox" aria-label="Checkbox for following text input">6 Over
-                  </div>
-                </div>
-                <input type="text" class="form-control" aria-label="Text input with checkbox">
-              </div>
-            </a>
-          </div>
-
-          <!--Temperament-->
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">Temperament
-            <a class="dropdown-item" href="#">
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">
-                    <input type="checkbox" aria-label="Checkbox for following text input">Calm
-                  </div>
-                </div>
-                <input type="text" class="form-control" aria-label="Text input with checkbox">
-              </div>
-            </a>
-
-            <a class="dropdown-item" href="#">
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">
-                    <input type="checkbox" aria-label="Checkbox for following text input">Energetic
-                  </div>
-                </div>
-                <input type="text" class="form-control" aria-label="Text input with checkbox">
-              </div>
-            </a>
-
-            <a class="dropdown-item" href="#">
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">
-                    <input type="checkbox" aria-label="Checkbox for following text input">Hyper Sensitive
-                  </div>
-                </div>
-                <input type="text" class="form-control" aria-label="Text input with checkbox">
-              </div>
-            </a>
-          </div>
-
       </nav>
     </div>
   </div>
